--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Moje investiční portfolio</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -36,8 +37,11 @@
     th {
       background-color: #eee;
     }
-    .toggle {
+    #search {
       float: right;
+    }
+    .chart-container {
+      margin-top: 2rem;
     }
   </style>
 </head>
@@ -53,7 +57,7 @@
       <option value="CZK">CZK</option>
     </select>
 
-    <input type="text" id="search" placeholder="Hledat akcie..." style="float:right;"/>
+    <input type="text" id="search" placeholder="Hledat akcie..." />
 
     <table id="portfolio">
       <thead>
@@ -89,9 +93,33 @@
           <td>0.8%</td>
           <td>8.4</td>
         </tr>
-        <!-- Další řádky zde -->
+        <tr>
+          <td><img src="https://logo.clearbit.com/britishamerican.com" alt="BTI" width="32" /></td>
+          <td>British American Tobacco</td>
+          <td>BTI</td>
+          <td>40</td>
+          <td>31.90</td>
+          <td class="value" data-usd="1276">1276</td>
+          <td>9.5%</td>
+          <td>121.2</td>
+        </tr>
+        <tr>
+          <td><img src="https://logo.clearbit.com/realityincome.com" alt="Realty Income" width="32" /></td>
+          <td>Realty Income</td>
+          <td>O</td>
+          <td>28</td>
+          <td>53.20</td>
+          <td class="value" data-usd="1490">1490</td>
+          <td>5.7%</td>
+          <td>84.0</td>
+        </tr>
       </tbody>
     </table>
+
+    <div class="chart-container">
+      <h2>Rozložení portfolia (USD)</h2>
+      <canvas id="portfolioChart"></canvas>
+    </div>
   </div>
 
   <script>
@@ -119,6 +147,27 @@
         const text = row.textContent.toLowerCase();
         row.style.display = text.includes(filter) ? "" : "none";
       });
+    });
+
+    const ctx = document.getElementById("portfolioChart").getContext("2d");
+    const chart = new Chart(ctx, {
+      type: "pie",
+      data: {
+        labels: ["Apple", "Microsoft", "BTI", "Realty Income"],
+        datasets: [{
+          label: "Hodnota (USD)",
+          data: [900, 1050, 1276, 1490],
+          backgroundColor: ["#4e79a7", "#f28e2b", "#e15759", "#76b7b2"]
+        }]
+      },
+      options: {
+        responsive: true,
+        plugins: {
+          legend: {
+            position: "bottom"
+          }
+        }
+      }
     });
   </script>
 </body>
