--- a/index.html
+++ b/index.html
@@ -253,3 +253,55 @@
     }
   });
 </script>
+  <script>
+  const dividendData = [
+    { month: "2025-05", amount: 6.25 },
+    { month: "2025-06", amount: 12.50 },
+    { month: "2025-07", amount: 18.75 },
+    { month: "2025-08", amount: 22.00 },
+    { month: "2025-09", amount: 25.40 },
+  ];
+
+  const ctx = document.getElementById("dividendChart").getContext("2d");
+  new Chart(ctx, {
+    type: "bar",
+    data: {
+      labels: dividendData.map(d => d.month),
+      datasets: [{
+        label: "Vyplacené dividendy (USD)",
+        data: dividendData.map(d => d.amount),
+        backgroundColor: "rgba(0, 153, 255, 0.8)",
+        borderColor: "rgba(0, 153, 255, 1)",
+        borderWidth: 1
+      }]
+    },
+    options: {
+      responsive: true,
+      plugins: {
+        legend: { display: false },
+        tooltip: {
+          backgroundColor: "#222",
+          titleColor: "#fff",
+          bodyColor: "#fff",
+          callbacks: {
+            label: ctx => `$${ctx.raw.toFixed(2)}`
+          }
+        }
+      },
+      scales: {
+        x: {
+          ticks: { color: "#ddd" },
+          grid: { color: "rgba(255,255,255,0.1)" }
+        },
+        y: {
+          ticks: { color: "#ddd" },
+          grid: { color: "rgba(255,255,255,0.1)" },
+          beginAtZero: true
+        }
+      },
+      layout: {
+        padding: 10
+      }
+    }
+  });
+</script>
